# tgcd-server

./: Cargo.toml  Dockerfile  flake.nix  rustfmt.toml  shell.nix
sql/: V1__schema.sql
src/: main.rs
